syntax = "proto3"; 

package db;

option go_package = "db/pkg"; 

// TODO: completar
message ParametroPut {
    string clave = 1;
    string valor = 2;
}

// TODO: completar
message ParametroGet {
    string clave = 1;
}

// TODO: completar
message ParametroGetAll {
}

// TODO: completar
message ResultadoPut {
    string mensaje = 1;
}

// TODO: completar
message ResultadoGet {
    string valor = 1;
}

// TODO: completar
message ResultadoGetAll {
    map<string, string> datos = 1;
}

service base {
    rpc put (ParametroPut) returns (ResultadoPut);
    rpc get (ParametroGet) returns (ResultadoGet);
    rpc getAll (ParametroGetAll) returns (ResultadoGetAll);
}
